...
        
        //
        let toolbar = UIToolbar();
        toolbar.sizeToFit()
        
        //done button & cancel button
        let doneButton = UIBarButtonItem(title: "Done", style: .done, target: self, action: #selector(doneDatePicker(_ :)))
        doneButton.accessibilityIdentifier = "doneButton"
        let spaceButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonSystemItem.flexibleSpace, target: nil, action: nil)
        let cancelButton = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(cancelDatePicker(_ :)))
        cancelButton.accessibilityIdentifier = "cancelButton"
        toolbar.setItems([cancelButton,spaceButton,doneButton], animated: false)
        
...
